kubernetes/argo-cd/projects/nebius/production-hm/spark-connect-server-large/environments/production/kubernetes-manifests/hm-spark-connect-server-large-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hm-spark-connect-server-large-deployment
  namespace: production-hm-spark-connect-server-large
  labels:
    app.kubernetes.io/name: spark-connect-server-large
    app.kubernetes.io/part-of: production-hm-spark-connect-server-large
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: spark-connect-server-large
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spark-connect-server-large
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: hm-spark-connect-server-large-service-account
      containers:
        - name: spark-connect-server-large
          image: harbor.hongbomiao.com/docker-hub-proxy-cache/apache/spark:4.1.1-scala2.13-java21-python3-r-ubuntu
          securityContext:
            runAsNonRoot: true
            runAsUser: 185
            runAsGroup: 185
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          command:
            - /bin/sh
            - -c
            - |
              [...]
          ports:
            - name: grpc
              containerPort: 15002
              protocol: TCP
            - name: spark-ui
              containerPort: 4040
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              memory: 2Gi
          livenessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: grpc
            initialDelaySeconds: 60
            periodSeconds: 5
          volumeMounts:
            - name: extra-jars
              mountPath: /opt/spark/extra-jars
      nodeSelector:
        environment: production
      tolerations:
        - key: environment
          operator: Equal
          value: production
          effect: NoSchedule
      volumes:
        - name: extra-jars
          emptyDir: {}
