kubernetes/argo-cd/projects/nebius/production-hm/spark-connect-server-large/environments/production/kubernetes-manifests/hm-spark-connect-server-large-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hm-spark-connect-server-large-service
  namespace: production-hm-spark-connect-server-large
  labels:
    app.kubernetes.io/name: spark-connect-server-large
    app.kubernetes.io/part-of: production-hm-spark-connect-server-large
spec:
  type: ClusterIP
  ports:
    - name: grpc
      port: 15002
      targetPort: grpc
      protocol: TCP
  selector:
    app.kubernetes.io/name: spark-connect-server-large
